--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,3 +17,31 @@ a.menu {
   font-size: 18px;
   color: white;
 }
+
+h2 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 23px;
+  font-weight: bold;
+}
+
+p {
+  font-size: 14px;
+}
+
+.design {
+  color: white;
+  font-size: 23px;
+  font-weight: bold;
+  background-color: black;
+}
+
+.foot {
+  font-size: 11px;
+  color: white;
+  background-color: dimgray;
+  text-align: left;
+}
