--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,7 @@ html{
 }
 
 .heading {
-  background-color: black;
+background-image: url("./the-flatiron-building.png");
 }
 
 h1 {
@@ -36,7 +36,7 @@ p {
   color: white;
   font-size: 23px;
   font-weight: bold;
-  background-color: black;
+  background-image: url("./the-flatiron-building.png");
 }
 
 .foot {
